--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <button onclick="getValues()" id="sortButton">Sort</button>
             </div>
             <div id="resultDiv">
-                <p id="result">Sorted numbers from lowest to highest: </p>
+                <p id="providedNumbers"></p>
+                <p id="result"></p>
             </div>
         </div>
         
